# nelson-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: base.py  user.py
backend/app/repositories/: base.py
backend/app/schemas/: auth.py  user.py
backend/app/tests/: conftest.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/e2e/: example.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: index.ts
scripts/: bootstrap.sh  setup-ollama.sh
specs/: openapi.yaml
