[project]
name = "nelson-backend"
version = "0.1.0"
description = "Backend FastAPI del proyecto Nelson"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "structlog>=24.4",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0",
    "qdrant-client>=1.12",
    "openai>=1.54",
    "ollama>=0.4",
    "redis>=5.2",
    "celery>=5.4",
    "httpx>=0.27",
    # Data Science
    "polars>=1.15",
    "pandas>=2.2",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "optuna>=4.1",
    "joblib>=1.4",
    "connectorx>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
